--- a/jupyter_notebooks/support_vector_machine.ipynb
+++ b/jupyter_notebooks/support_vector_machine.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "### Introduction\n",
-    "This Notebook implements a support vector machine classifier and combines different encoding and balancing approaches, aiming to identify the combination on which the SVM-classifier performes best regarding the F2-Score. In addition, a parameter optimization is conducted. The best performing model is then tested by means of a held out test set."
+    "This Notebook implements a support vector machine classifier and combines different encoding and balancing approaches, aiming to identify the combination on which the SVM-classifier performes best regarding the F2-Score. In addition, a hyperparameter optimization is conducted. The best performing model is then tested by means of a held out test set."
    ]
   },
   {
@@ -66,7 +66,7 @@
     "\n",
     "Due to a considerable class imbalance (refer to preprocessing.ipynb), each encoding approach is additionaly available with oversampling or undersampling.\n",
     "\n",
-    "In the following, all three encoding approaches combined with no sampling and undersampling will be used to train and val a LinearSVC classifier by means of a train/val split provided by the respective preprocessing. The target dataset was not one hot encoded for this experiment. In order to maintain a feasible computational effort in regards to the available environment, the **max_iter** parameter of the LinearSVC was set to 500 and the **C** parameter was left on the default value 1.0 for the encoding selection. \n",
+    "In the following, all three encoding approaches combined with no sampling and undersampling will be used to train and val a LinearSVC classifier by means of a train/val split provided by the respective preprocessing. The target dataset was not one hot encoded for this experiment. In order to maintain a feasible computational effort in regards to the available environment, the **max_iter** hyperparameter of the LinearSVC was set to 500 and the **C** hyperparameter was left on the default value 1.0 for the encoding selection. \n",
     "\n"
    ]
   },
@@ -545,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Parameter Optimization\n"
+    "### Hyperparameter Optimization\n"
    ]
   },
   {
@@ -562,100 +562,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to optimize the following parameters:\n",
+    "We want to optimize the following hyper parameters:\n",
     "- **C**: the regularization parameter that controls the trade-off between the slack variable penalty (misclassifications) and width of the margin. A higher value results in the optimization choosing a smaller-margin hyperplane if that hyperplane does a better job of getting all the training points classified correctly. Default = 1.0\n",
     "- **max_iter**: the maximum number of iterations to be run. Default = 1000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy for C = 0.01 and max_iter = 200: 0.8554482878046669\n",
-      "F1-Score for C = 0.01 and max_iter = 200: 0.8035895909451637\n",
-      "\n",
-      "Accuracy for C = 0.01 and max_iter = 500: 0.8554482878046669\n",
-      "F1-Score for C = 0.01 and max_iter = 500: 0.8035895909451637\n",
-      "\n",
-      "Accuracy for C = 0.01 and max_iter = 1000: 0.8554482878046669\n",
-      "F1-Score for C = 0.01 and max_iter = 1000: 0.8035895909451637\n",
-      "\n",
-      "Accuracy for C = 0.01 and max_iter = 1500: 0.8554482878046669\n",
-      "F1-Score for C = 0.01 and max_iter = 1500: 0.8035895909451637\n",
-      "\n",
-      "Accuracy for C = 0.01 and max_iter = 2000: 0.8554482878046669\n",
-      "F1-Score for C = 0.01 and max_iter = 2000: 0.8035895909451637\n",
-      "\n",
-      "Accuracy for C = 0.1 and max_iter = 200: 0.855534871639465\n",
-      "F1-Score for C = 0.1 and max_iter = 200: 0.8039144369378222\n",
-      "\n",
-      "Accuracy for C = 0.1 and max_iter = 500: 0.855534871639465\n",
-      "F1-Score for C = 0.1 and max_iter = 500: 0.8039144369378222\n",
-      "\n",
-      "Accuracy for C = 0.1 and max_iter = 1000: 0.855534871639465\n",
-      "F1-Score for C = 0.1 and max_iter = 1000: 0.8039144369378222\n",
-      "\n",
-      "Accuracy for C = 0.1 and max_iter = 1500: 0.855534871639465\n",
-      "F1-Score for C = 0.1 and max_iter = 1500: 0.8039144369378222\n",
-      "\n",
-      "Accuracy for C = 0.1 and max_iter = 2000: 0.855534871639465\n",
-      "F1-Score for C = 0.1 and max_iter = 2000: 0.8039144369378222\n",
-      "\n",
-      "Accuracy for C = 10 and max_iter = 200: 0.802740378371358\n",
-      "F1-Score for C = 10 and max_iter = 200: 0.8061570830588141\n",
-      "\n",
-      "Accuracy for C = 10 and max_iter = 500: 0.8554049958872678\n",
-      "F1-Score for C = 10 and max_iter = 500: 0.8122677691575606\n",
-      "\n",
-      "Accuracy for C = 10 and max_iter = 1000: 0.8552318282176717\n",
-      "F1-Score for C = 10 and max_iter = 1000: 0.8026834036219596\n",
-      "\n",
-      "Accuracy for C = 10 and max_iter = 1500: 0.8560110827308541\n",
-      "F1-Score for C = 10 and max_iter = 1500: 0.8074803698939504\n",
-      "\n",
-      "Accuracy for C = 10 and max_iter = 2000: 0.8556863933503615\n",
-      "F1-Score for C = 10 and max_iter = 2000: 0.8047353400503288\n",
-      "\n",
-      "Accuracy for C = 100 and max_iter = 200: 0.4087406381228625\n",
-      "F1-Score for C = 100 and max_iter = 200: 0.46341667096786876\n",
-      "\n",
-      "Accuracy for C = 100 and max_iter = 500: 0.8496688168318974\n",
-      "F1-Score for C = 100 and max_iter = 500: 0.8006318010860655\n",
-      "\n",
-      "Accuracy for C = 100 and max_iter = 1000: 0.8414217065673839\n",
-      "F1-Score for C = 100 and max_iter = 1000: 0.8146267001903397\n",
-      "\n",
-      "Accuracy for C = 100 and max_iter = 1500: 0.8511840339408633\n",
-      "F1-Score for C = 100 and max_iter = 1500: 0.7971586978649504\n",
-      "\n",
-      "Accuracy for C = 100 and max_iter = 2000: 0.8452963331745963\n",
-      "F1-Score for C = 100 and max_iter = 2000: 0.8212897501441618\n",
-      "\n",
-      "Accuracy for C = 1000 and max_iter = 200: 0.8521148101649422\n",
-      "F1-Score for C = 1000 and max_iter = 200: 0.7910716698118854\n",
-      "\n",
-      "Accuracy for C = 1000 and max_iter = 500: 0.8056625827957921\n",
-      "F1-Score for C = 1000 and max_iter = 500: 0.8004051382701879\n",
-      "\n",
-      "Accuracy for C = 1000 and max_iter = 1000: 0.8433265509329408\n",
-      "F1-Score for C = 1000 and max_iter = 1000: 0.793667876105759\n",
-      "\n",
-      "Accuracy for C = 1000 and max_iter = 1500: 0.8459024200181826\n",
-      "F1-Score for C = 1000 and max_iter = 1500: 0.8103158413473596\n",
-      "\n",
-      "Accuracy for C = 1000 and max_iter = 2000: 0.8509892203125676\n",
-      "F1-Score for C = 1000 and max_iter = 2000: 0.7889432065487453\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# try different parameter combinations\n",
+    "# try different hyperparameter combinations\n",
     "for c in [0.01, 0.1, 10, 100, 1000]:\n",
     "    for iter in [200, 500, 1000, 1500, 2000]:\n",
     "        svm = LinearSVC(C=c, max_iter=iter)\n",
@@ -670,7 +588,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Of the 25 parameter combinations tested, the parameters **C = XX and max_iter = XX** achieve the best F2-Score of **XXX**.\n",
+    "Of the 25 hyperparameter combinations tested, the parameters **C = XX and max_iter = XX** achieve the best F2-Score of **XXX**.\n",
     "The LinearSVC achieves the best accuracy for **C = XX and max_iter = XXXX : XXX%**.\n",
     "However, this is only a  small improvement in comparison to the most simple model (C = 0.01 and max_iter = 200, F2-Score: **XXX**). Hence, following the principle of parsimony (Occam's razor), one might proceed with the simpler model.\n",
     "Nevertheless, in our case, we propose that the improved performance justifies the selection of the more sophisticated model.\n",
