--- a/jupyter_notebooks/support_vector_machine.ipynb
+++ b/jupyter_notebooks/support_vector_machine.ipynb
@@ -705,7 +705,7 @@
     "test_predictions = svm.predict(data_test)\n",
     "\n",
     "#evaluate\n",
-    "#print(evaluation(target_test, test_predictions, \"Final Model: One Hot Encoding - All - No Sampling - C = & max_iter =\")[0])"
+    "#print(evaluation(target_test, test_predictions, \"Final Model: One Hot Encoding - All - Undersampling - C = & max_iter =\")[0])"
    ]
   }
  ],
