run parameter optimization

--- a/jupyter_notebooks/support_vector_machine.ipynb
+++ b/jupyter_notebooks/support_vector_machine.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,9 +637,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy for C = 0.01 and max_iter = 200: 0.7400433438732369\n",
+      "F2-Score for C = 0.01 and max_iter = 200: 0.6079627347356547\n",
+      "\n",
+      "Accuracy for C = 0.01 and max_iter = 500: 0.7400433438732369\n",
+      "F2-Score for C = 0.01 and max_iter = 500: 0.6079627347356547\n",
+      "\n",
+      "Accuracy for C = 0.01 and max_iter = 1000: 0.7400433438732369\n",
+      "F2-Score for C = 0.01 and max_iter = 1000: 0.6079627347356547\n",
+      "\n",
+      "Accuracy for C = 0.01 and max_iter = 1500: 0.7400433438732369\n",
+      "F2-Score for C = 0.01 and max_iter = 1500: 0.6079627347356547\n",
+      "\n",
+      "Accuracy for C = 0.01 and max_iter = 2000: 0.7400433438732369\n",
+      "F2-Score for C = 0.01 and max_iter = 2000: 0.6079627347356547\n",
+      "\n",
+      "Accuracy for C = 0.1 and max_iter = 200: 0.739812413401073\n",
+      "F2-Score for C = 0.1 and max_iter = 200: 0.6077976861713235\n",
+      "\n",
+      "Accuracy for C = 0.1 and max_iter = 500: 0.739812413401073\n",
+      "F2-Score for C = 0.1 and max_iter = 500: 0.6077976861713235\n",
+      "\n",
+      "Accuracy for C = 0.1 and max_iter = 1000: 0.739812413401073\n",
+      "F2-Score for C = 0.1 and max_iter = 1000: 0.6077976861713235\n",
+      "\n",
+      "Accuracy for C = 0.1 and max_iter = 1500: 0.739812413401073\n",
+      "F2-Score for C = 0.1 and max_iter = 1500: 0.6077976861713235\n",
+      "\n",
+      "Accuracy for C = 0.1 and max_iter = 2000: 0.739812413401073\n",
+      "F2-Score for C = 0.1 and max_iter = 2000: 0.6077976861713235\n",
+      "\n",
+      "Accuracy for C = 10 and max_iter = 200: 0.576473514051231\n",
+      "F2-Score for C = 10 and max_iter = 200: 0.556468031959486\n",
+      "\n",
+      "Accuracy for C = 10 and max_iter = 500: 0.7594770312999609\n",
+      "F2-Score for C = 10 and max_iter = 500: 0.5788955713504648\n",
+      "\n",
+      "Accuracy for C = 10 and max_iter = 1000: 0.7234163498774292\n",
+      "F2-Score for C = 10 and max_iter = 1000: 0.6058505758842117\n",
+      "\n",
+      "Accuracy for C = 10 and max_iter = 1500: 0.7078551888300707\n",
+      "F2-Score for C = 10 and max_iter = 1500: 0.6052395656937941\n",
+      "\n",
+      "Accuracy for C = 10 and max_iter = 2000: 0.7361530536113973\n",
+      "F2-Score for C = 10 and max_iter = 2000: 0.6074766355140186\n",
+      "\n",
+      "Accuracy for C = 100 and max_iter = 200: 0.7386399971577788\n",
+      "F2-Score for C = 100 and max_iter = 200: 0.5588700709947823\n",
+      "\n",
+      "Accuracy for C = 100 and max_iter = 500: 0.2550182967989484\n",
+      "F2-Score for C = 100 and max_iter = 500: 0.4546800757156285\n",
+      "\n",
+      "Accuracy for C = 100 and max_iter = 1000: 0.5183500905958006\n",
+      "F2-Score for C = 100 and max_iter = 1000: 0.5392306825317598\n",
+      "\n",
+      "Accuracy for C = 100 and max_iter = 1500: 0.6610118307457278\n",
+      "F2-Score for C = 100 and max_iter = 1500: 0.5666134367514544\n",
+      "\n",
+      "Accuracy for C = 100 and max_iter = 2000: 0.7822325647493517\n",
+      "F2-Score for C = 100 and max_iter = 2000: 0.5536264544911005\n",
+      "\n",
+      "Accuracy for C = 1000 and max_iter = 200: 0.8047926954915267\n",
+      "F2-Score for C = 1000 and max_iter = 200: 0.41905078164912646\n",
+      "\n",
+      "Accuracy for C = 1000 and max_iter = 500: 0.5218851032081572\n",
+      "F2-Score for C = 1000 and max_iter = 500: 0.531552295007466\n",
+      "\n",
+      "Accuracy for C = 1000 and max_iter = 1000: 0.4979926812804206\n",
+      "F2-Score for C = 1000 and max_iter = 1000: 0.5267782228062121\n",
+      "\n",
+      "Accuracy for C = 1000 and max_iter = 1500: 0.836998614417167\n",
+      "F2-Score for C = 1000 and max_iter = 1500: 0.3707342725083723\n",
+      "\n",
+      "Accuracy for C = 1000 and max_iter = 2000: 0.6913703058940562\n",
+      "F2-Score for C = 1000 and max_iter = 2000: 0.564110715917897\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# try different hyperparameter combinations\n",
     "for c in [0.01, 0.1, 10, 100, 1000]:\n",
