--- a/jupyter_notebooks/test_300_attributes.ipynb
+++ b/jupyter_notebooks/test_300_attributes.ipynb
@@ -2,33 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "from preprocessing.preprocessing import *\n",
-    "from sklearn.neighbors import KNeighborsClassifier"
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "outputs": [],
    "source": [
     "def preprocess_dataset(dataset):\n",
     "    dataset = dataset.dropna(subset=['DIABETE3'])\n",
     "    dataset = dataset[dataset.DIABETE3 != 2]\n",
     "    dataset = dataset[dataset.DIABETE3 != 4]\n",
+    "    dataset = dataset[dataset.DIABETE3 != 9]\n",
+    "    dataset = dataset[dataset.DIABETE3 != 7]\n",
     "    dataset[\"DIABETE3\"] = dataset[\"DIABETE3\"].replace(3, 0)\n",
     "    dataset.reset_index(inplace=True, drop=True)\n",
     "    target = pd.DataFrame(dataset[\"DIABETE3\"])\n",
+    "    #dataset = dataset.drop(columns=[\"DIABETE3\", \"IDATE\", \"IMONTH\", \"IDAY\", \"IYEAR\", \"PCDMDECN\", \"EXACTOT1\", \"EXACTOT2\"])\n",
     "    dataset = dataset.drop(columns=\"DIABETE3\")\n",
     "    dataset = dataset.fillna(0)\n",
     "    return dataset, target\n",
     "\n",
-    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')"
+    "#params = ('euclidean'), 'cosine', 'manhattan', 'jaccard')"
    ],
    "metadata": {
     "collapsed": false
@@ -45,40 +50,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "could not convert string to float: \"b'08102015'\"",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mValueError\u001B[0m                                Traceback (most recent call last)",
-      "\u001B[0;32m/var/folders/gb/ysvlhf750rb4j7nrjksxskw00000gn/T/ipykernel_34501/2104216149.py\u001B[0m in \u001B[0;36m<module>\u001B[0;34m\u001B[0m\n\u001B[1;32m      8\u001B[0m     \u001B[0;32mfor\u001B[0m \u001B[0mmetric\u001B[0m \u001B[0;32min\u001B[0m \u001B[0mparams\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m      9\u001B[0m         \u001B[0mknn_estimator\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mKNeighborsClassifier\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mn_neighbors\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mk_neighbors\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmetric\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mmetric\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 10\u001B[0;31m         \u001B[0mknn_estimator\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mfit\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdata_train\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mtarget_train\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mvalues\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mravel\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     11\u001B[0m         \u001B[0mdiabetes_test_prediction\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mknn_estimator\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mpredict\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdata_validation\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     12\u001B[0m         \u001B[0mf2\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mfbeta_score\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mtarget_validation\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mdiabetes_test_prediction\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;36m2\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_classification.py\u001B[0m in \u001B[0;36mfit\u001B[0;34m(self, X, y)\u001B[0m\n\u001B[1;32m    198\u001B[0m         \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mweights\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0m_check_weights\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mweights\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    199\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 200\u001B[0;31m         \u001B[0;32mreturn\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_fit\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0my\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    201\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    202\u001B[0m     \u001B[0;32mdef\u001B[0m \u001B[0mpredict\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mX\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/opt/anaconda3/lib/python3.9/site-packages/sklearn/neighbors/_base.py\u001B[0m in \u001B[0;36m_fit\u001B[0;34m(self, X, y)\u001B[0m\n\u001B[1;32m    405\u001B[0m         \u001B[0;32mif\u001B[0m \u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_get_tags\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m[\u001B[0m\u001B[0;34m\"requires_y\"\u001B[0m\u001B[0;34m]\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    406\u001B[0m             \u001B[0;32mif\u001B[0m \u001B[0;32mnot\u001B[0m \u001B[0misinstance\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m(\u001B[0m\u001B[0mKDTree\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mBallTree\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mNeighborsBase\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 407\u001B[0;31m                 X, y = self._validate_data(\n\u001B[0m\u001B[1;32m    408\u001B[0m                     \u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0my\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0maccept_sparse\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m\"csr\"\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mmulti_output\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mTrue\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0morder\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m\"C\"\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    409\u001B[0m                 )\n",
-      "\u001B[0;32m~/opt/anaconda3/lib/python3.9/site-packages/sklearn/base.py\u001B[0m in \u001B[0;36m_validate_data\u001B[0;34m(self, X, y, reset, validate_separately, **check_params)\u001B[0m\n\u001B[1;32m    594\u001B[0m                 \u001B[0my\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcheck_array\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0my\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0minput_name\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m\"y\"\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mcheck_y_params\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    595\u001B[0m             \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 596\u001B[0;31m                 \u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0my\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mcheck_X_y\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0my\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0;34m**\u001B[0m\u001B[0mcheck_params\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    597\u001B[0m             \u001B[0mout\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0my\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    598\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/opt/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py\u001B[0m in \u001B[0;36mcheck_X_y\u001B[0;34m(X, y, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, multi_output, ensure_min_samples, ensure_min_features, y_numeric, estimator)\u001B[0m\n\u001B[1;32m   1072\u001B[0m         )\n\u001B[1;32m   1073\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 1074\u001B[0;31m     X = check_array(\n\u001B[0m\u001B[1;32m   1075\u001B[0m         \u001B[0mX\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   1076\u001B[0m         \u001B[0maccept_sparse\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0maccept_sparse\u001B[0m\u001B[0;34m,\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
-      "\u001B[0;32m~/opt/anaconda3/lib/python3.9/site-packages/sklearn/utils/validation.py\u001B[0m in \u001B[0;36mcheck_array\u001B[0;34m(array, accept_sparse, accept_large_sparse, dtype, order, copy, force_all_finite, ensure_2d, allow_nd, ensure_min_samples, ensure_min_features, estimator, input_name)\u001B[0m\n\u001B[1;32m    854\u001B[0m                     \u001B[0marray\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0marray\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mastype\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mdtype\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mcasting\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;34m\"unsafe\"\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mcopy\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0;32mFalse\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    855\u001B[0m                 \u001B[0;32melse\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m--> 856\u001B[0;31m                     \u001B[0marray\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0masarray\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0marray\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0morder\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0morder\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mdtype\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mdtype\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m    857\u001B[0m             \u001B[0;32mexcept\u001B[0m \u001B[0mComplexWarning\u001B[0m \u001B[0;32mas\u001B[0m \u001B[0mcomplex_warning\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m    858\u001B[0m                 raise ValueError(\n",
-      "\u001B[0;32m~/opt/anaconda3/lib/python3.9/site-packages/pandas/core/generic.py\u001B[0m in \u001B[0;36m__array__\u001B[0;34m(self, dtype)\u001B[0m\n\u001B[1;32m   2062\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   2063\u001B[0m     \u001B[0;32mdef\u001B[0m \u001B[0m__array__\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mdtype\u001B[0m\u001B[0;34m:\u001B[0m \u001B[0mnpt\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mDTypeLike\u001B[0m \u001B[0;34m|\u001B[0m \u001B[0;32mNone\u001B[0m \u001B[0;34m=\u001B[0m \u001B[0;32mNone\u001B[0m\u001B[0;34m)\u001B[0m \u001B[0;34m->\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mndarray\u001B[0m\u001B[0;34m:\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m-> 2064\u001B[0;31m         \u001B[0;32mreturn\u001B[0m \u001B[0mnp\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0masarray\u001B[0m\u001B[0;34m(\u001B[0m\u001B[0mself\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0m_values\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mdtype\u001B[0m\u001B[0;34m=\u001B[0m\u001B[0mdtype\u001B[0m\u001B[0;34m)\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m   2065\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m   2066\u001B[0m     def __array_wrap__(\n",
-      "\u001B[0;31mValueError\u001B[0m: could not convert string to float: \"b'08102015'\""
-     ]
-    }
-   ],
+   "execution_count": 21,
+   "outputs": [],
    "source": [
     "from sklearn.metrics import fbeta_score\n",
     "\n",
     "dataset = load_dataset()\n",
     "dataset, target = preprocess_dataset(dataset)\n",
-    "data_train, data_validation, data_test, target_train, target_validation, target_test = get_train_validation_test_split(dataset, target, include_test_data=True)\n",
-    "\n",
-    "for k_neighbors in range(5,15):\n",
-    "    for metric in params:\n",
-    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "data_train, data_validation, data_test, target_train, target_validation, target_test = get_train_validation_test_split(dataset, target, include_test_data=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K = 2, metric = euclidean --> F2 = 0.07056472596323973\n",
+      "K = 3, metric = euclidean --> F2 = 0.14501681921301726\n",
+      "K = 4, metric = euclidean --> F2 = 0.056268738651239394\n",
+      "K = 5, metric = euclidean --> F2 = 0.0984247936254327\n",
+      "K = 6, metric = euclidean --> F2 = 0.0430189965073686\n",
+      "K = 7, metric = euclidean --> F2 = 0.06994249869315211\n",
+      "K = 8, metric = euclidean --> F2 = 0.03522634802346995\n",
+      "K = 9, metric = euclidean --> F2 = 0.057144066541090804\n",
+      "K = 10, metric = euclidean --> F2 = 0.030447131729569216\n",
+      "K = 11, metric = euclidean --> F2 = 0.04239912852169084\n",
+      "K = 12, metric = euclidean --> F2 = 0.02288131934550792\n",
+      "K = 13, metric = euclidean --> F2 = 0.0331644700124501\n",
+      "K = 14, metric = euclidean --> F2 = 0.018931608213072545\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k_neighbors in range(2,15):\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=\"euclidean\")\n",
     "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
     "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
-    "        f2 = fbeta_score(target_validation, diabetes_test_prediction, 2)\n",
-    "        print(\"K = {}, metric = {} --> F2 = {}\".format(k_neighbors, metric, f2))"
+    "        f2 = fbeta_score(target_validation, diabetes_test_prediction, beta=2)\n",
+    "        print(\"K = {}, metric = {} --> F2 = {}\".format(k_neighbors, \"euclidean\", f2))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F2 = 0.22696929238985314\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test best classifier again\n",
+    "knn_estimator = KNeighborsClassifier(n_neighbors=1, metric=\"euclidean\")\n",
+    "knn_estimator.fit(data_train, target_train.values.ravel())\n",
+    "diabetes_test_prediction = knn_estimator.predict(data_test)\n",
+    "f2 = fbeta_score(target_test, diabetes_test_prediction, beta=2)\n",
+    "print(\"F2 = {}\".format(f2))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Now try with only the 30 selected variables"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [],
+   "source": [
+    "dataset = load_dataset()\n",
+    "dataset = dataset[relevant_columns]\n",
+    "dataset, target = preprocess_dataset(dataset)\n",
+    "data_train, data_validation, data_test, target_train, target_validation, target_test = get_train_validation_test_split(dataset, target, include_test_data=True)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K = 1, metric = euclidean --> F2 = 0.25871107538531435\n",
+      "K = 2, metric = euclidean --> F2 = 0.09348389485375787\n",
+      "K = 3, metric = euclidean --> F2 = 0.1959211732355637\n",
+      "K = 4, metric = euclidean --> F2 = 0.09191138374816074\n",
+      "K = 5, metric = euclidean --> F2 = 0.15675815023399697\n",
+      "K = 6, metric = euclidean --> F2 = 0.08459372066339835\n",
+      "K = 7, metric = euclidean --> F2 = 0.12948632015111816\n",
+      "K = 8, metric = euclidean --> F2 = 0.07585467840558088\n",
+      "K = 9, metric = euclidean --> F2 = 0.11177209197011177\n",
+      "K = 10, metric = euclidean --> F2 = 0.06825038502922003\n",
+      "K = 11, metric = euclidean --> F2 = 0.09758480212836716\n",
+      "K = 12, metric = euclidean --> F2 = 0.06251986860231006\n",
+      "K = 13, metric = euclidean --> F2 = 0.08585128881629918\n",
+      "K = 14, metric = euclidean --> F2 = 0.05813829900303978\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k_neighbors in range(1,15):\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=\"euclidean\")\n",
+    "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
+    "        f2 = fbeta_score(target_validation, diabetes_test_prediction, beta=2)\n",
+    "        print(\"K = {}, metric = {} --> F2 = {}\".format(k_neighbors, \"euclidean\", f2))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F2 = 0.26244999912662226\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test best classifier again\n",
+    "knn_estimator = KNeighborsClassifier(n_neighbors=1, metric=\"euclidean\")\n",
+    "knn_estimator.fit(data_train, target_train.values.ravel())\n",
+    "diabetes_test_prediction = knn_estimator.predict(data_test)\n",
+    "f2 = fbeta_score(target_test, diabetes_test_prediction, beta=2)\n",
+    "print(\"F2 = {}\".format(f2))"
    ],
    "metadata": {
     "collapsed": false
