K nearest neighbor centroid to main (#12)
Co-authored-by: Niklas Kemper <65356992+Niklas-23@users.noreply.github.com>
Co-authored-by: johannzapf <johann.zapf@gmail.com>

--- a/jupyter_notebooks/k_nearest_neighbor.ipynb
+++ b/jupyter_notebooks/k_nearest_neighbor.ipynb
@@ -1,16 +1,529 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# K-nearest neighbor\n",
+    "In this notebook we want to train a K-nearest-neighbor classifier that should predict whether a patient has diabetes or not."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/I516258/opt/anaconda3/lib/python3.9/site-packages/scipy/__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.3\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "#imports\n",
+    "from preprocessing.preprocessing_label_encoding import *\n",
+    "from preprocessing.preprocessing_one_hot_encoding import *\n",
+    "\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import *\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "#used to store the results and compare at the end\n",
+    "approach_list = []\n",
+    "acc_list = []\n",
+    "cr_list = []\n",
+    "f2_list = []"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Hyperparameter tuning and preprocessing\n",
+    "We will evaluate different parameters for the classifier (hyperparameter tuning) as well as different preprocessing steps based on the accuracy and F2-Score.\n",
+    "\n",
+    "In detail, we will vary regarding parameters:<br>\n",
+    "\n",
+    "| **Parameter** |                    **range Values**                    |\n",
+    "|:-------------:|:------------------------------------------------------:|\n",
+    "|    metric     | 'euclidean',<br>'cosine',<br>'manhattan',<br>'jaccard' |\n",
+    "|  K-neighbors  |                          5-15                          |\n",
+    "\n",
+    "And we will vary for preprocessing:\n",
+    "\n",
+    "\n",
+    "|              **Preprocessing**              |                           **Description**                           |\n",
+    "|:-------------------------------------------:|:-------------------------------------------------------------------:|\n",
+    "|               Label Encoding                |                           Label encoding                            |\n",
+    "|     Label Encoding<br>+<br>Oversampling     |                   Label encoding and oversampling                   |\n",
+    "|    Label Encoding<br>+<br>Undersampling     |                  Label encoding and undersampling                   |\n",
+    "|            One Hot Encoding (1)             |           One hot encoding for all columns except yes/no            |\n",
+    "|            One Hot Encoding (2)             |          One hot encoding for all columns including yes/no          |\n",
+    "|  One Hot Encoding (1)<br>+<br>Oversampling  |   One hot encoding for all columns except yes/no and oversampling   |\n",
+    "| One Hot Encoding (2) <br>+<br>Oversampling  | One hot encoding for all columns including yes/no and oversampling  |\n",
+    "| One Hot Encoding (1)<br>+<br>Undersampling  |  One hot encoding for all columns except yes/no and undersampling   |\n",
+    "| One Hot Encoding (2) <br>+<br>Undersampling | One hot encoding for all columns including yes/no and undersampling |"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "The below defined function is used to store all the accuracy and F2-scores for a better comparison and evaluation capability at the end. It also returns the Accuracy score and F2-Score to see the performance directly under each method."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
+    "def evaluation(target_validation, diabetes_test_prediction, k, metric, preprocessing):\n",
+    "    approach = \"preprocessing: {} k= {} metric: {}\".format(preprocessing, k, metric)\n",
+    "    approach_list.append(approach)\n",
+    "    acc = accuracy_score(target_validation, diabetes_test_prediction)\n",
+    "    acc_list.append(acc)\n",
+    "    cr = classification_report(target_validation, diabetes_test_prediction)\n",
+    "    cr_list.append(cr)\n",
+    "    f2 = fbeta_score(target_validation, diabetes_test_prediction, 2)\n",
+    "    f2_list.append(f2)\n",
+    "    return \"{}\\n acc = {}\\n f2-score = {}\".format(approach, acc, f2)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We start with applying a K-nearest neighbor classifier to the train data and test against the validation data on how it performs by using the accuracy and F2-score.\n",
+    "\n",
+    "We will do so for each combination that is listed above by using two for loops. The following estimators are structured by the different style of preprocessing.\n",
+    "\n",
+    "At the end we test the best approach against the actual test data."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Label Encoding"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k= 5 metric: cosine:\n",
+      " acc = 0.8348629810814321\n",
+      " f1-score = 0.8086342517615546\n",
+      "k= 5 metric: manhattan:\n",
+      " acc = 0.8379150612580631\n",
+      " f1-score = 0.8107654592583807\n",
+      "k= 6 metric: cosine:\n",
+      " acc = 0.8322438200787913\n",
+      " f1-score = 0.8117186129597088\n",
+      "k= 6 metric: manhattan:\n",
+      " acc = 0.8342136023204467\n",
+      " f1-score = 0.8125962193311277\n"
+     ]
+    }
+   ],
+   "source": [
+    "preprocessing = \"Label Encoding\"\n",
+    "\n",
+    "#load data\n",
+    "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split()\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
+    "\n",
+    "for k_neighbors in range(5,16):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
+    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Label Encoding + Oversampling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [],
-   "source": []
+   "source": [
+    "preprocessing = \"Label Encoding + Oversampling\"\n",
+    "\n",
+    "#load data\n",
+    "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split_oversampled()\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
+    "\n",
+    "for k_neighbors in range(5,7):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
+    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Label Encoding + Undersampling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "preprocessing = \"Label Encoding + Undersampling\"\n",
+    "\n",
+    "#load data\n",
+    "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_label_encoded_train_test_split_undersampled()\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
+    "\n",
+    "for k_neighbors in range(5,7):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
+    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# One Hot Encoding (1)\n",
+    "yes/no values not one hot encoded"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "preprocessing = \"One Hot Encoding (1)\"\n",
+    "\n",
+    "#load data\n",
+    "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split()\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
+    "\n",
+    "for k_neighbors in range(5,7):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
+    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# One Hot Encoding (2)\n",
+    "all columns one hot encoded"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "preprocessing = \"One Hot Encoding (2)\"\n",
+    "\n",
+    "#load data\n",
+    "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split()\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
+    "\n",
+    "for k_neighbors in range(5,7):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
+    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# One Hot Encoding (1) + Oversampling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "preprocessing = \"One Hot Encoding (1) + Oversampling\"\n",
+    "\n",
+    "#load data\n",
+    "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_oversampled()\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
+    "\n",
+    "for k_neighbors in range(5,7):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
+    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# One Hot Encoding (2) + Oversampling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "preprocessing = \"One Hot Encoding (2) + Oversampling\"\n",
+    "\n",
+    "#load data\n",
+    "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_oversampled()\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
+    "\n",
+    "for k_neighbors in range(5,7):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
+    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# One Hot Encoding (1) + Undersampling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "preprocessing = \"One Hot Encoding (1) + Undersampling\"\n",
+    "\n",
+    "#load data\n",
+    "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_train_test_split_undersampled()\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
+    "\n",
+    "for k_neighbors in range(5,7):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
+    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# One Hot Encoding (2) + Undersampling"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "preprocessing = \"One Hot Encoding (2) + Undersampling\"\n",
+    "\n",
+    "#load data\n",
+    "data_train, data_validation, target_train, target_validation = get_preprocessed_brfss_dataset_one_hot_encoded_all_columns_train_test_split_undersampled()\n",
+    "\n",
+    "#metrics that should be used\n",
+    "params = ('euclidean', 'cosine', 'manhattan', 'jaccard')\n",
+    "\n",
+    "for k_neighbors in range(5,7):\n",
+    "    for metric in params:\n",
+    "        knn_estimator = KNeighborsClassifier(n_neighbors=k_neighbors, metric=metric)\n",
+    "        knn_estimator.fit(data_train, target_train.values.ravel())\n",
+    "        diabetes_test_prediction = knn_estimator.predict(data_validation)\n",
+    "        print(evaluation(target_validation, diabetes_test_prediction, k_neighbors, metric, preprocessing))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Evaluation of best approach\n",
+    "We use the following loop to print all F2- and accuracy-scores and thereby also analyze which approach performed best."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nr.0) k= 5 metric: cosine\n",
+      "Weighted F1-Score = 0.8086342517615546\n",
+      "Accuracy-Score = 0.8348629810814321\n",
+      "\n",
+      "Nr.1) k= 5 metric: manhattan\n",
+      "Weighted F1-Score = 0.8107654592583807\n",
+      "Accuracy-Score = 0.8379150612580631\n",
+      "\n",
+      "Nr.2) k= 6 metric: cosine\n",
+      "Weighted F1-Score = 0.8117186129597088\n",
+      "Accuracy-Score = 0.8322438200787913\n",
+      "\n",
+      "Nr.3) k= 6 metric: manhattan\n",
+      "Weighted F1-Score = 0.8125962193311277\n",
+      "Accuracy-Score = 0.8342136023204467\n",
+      "\n",
+      "--------- Best Approaches ---------\n",
+      "Best Approach regarding F1-Score:\n",
+      "Nr.3) Parameter: (k= 6 metric: manhattan) with f1-score = 0.8125962193311277\n",
+      "\n",
+      "Best Approach regarding Accuracy:\n",
+      "Nr.1) Parameter: (k= 5 metric: manhattan) with acc = 0.8379150612580631\n"
+     ]
+    }
+   ],
+   "source": [
+    "highest_acc = [0.0, None, None]\n",
+    "highest_f2 = [0.0, None, None]\n",
+    "\n",
+    "for i in range(0, len(approach_list)):\n",
+    "    print(\"Nr.{}) {}\".format(i, approach_list[i]))\n",
+    "    print (\"Weighted F2-Score = {}\".format(f2_list[i]))\n",
+    "    print (\"Accuracy-Score = {}\\n\".format(acc_list[i]))\n",
+    "    if highest_f2[0] < float(f2_list[i]):\n",
+    "        highest_f2[0] = f2_list[i]\n",
+    "        highest_f2[1] = i\n",
+    "        highest_f2[2] = approach_list[i]\n",
+    "    if highest_acc[0] < float(acc_list[i]):\n",
+    "        highest_acc[0] = acc_list[i]\n",
+    "        highest_acc[1] = i\n",
+    "        highest_acc[2] = approach_list[i]\n",
+    "\n",
+    "print(\"--------- Best Approaches ---------\")\n",
+    "print(\"Best Approach regarding F2-Score:\\nNr.{}) {} with f2-score = {}\\n\".format(highest_f2[1], highest_f2[2], highest_f2[0]))\n",
+    "print(\"Best Approach regarding Accuracy:\\nNr.{}) {} with acc = {}\".format(highest_acc[1], highest_acc[2], highest_acc[0]))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We can see that approach _tbd_ with k = _tbd_ and metric = _tbd_ performed best.\n",
+    "We test this approach now finally against the test data that we separated at the beginning:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "#tbd"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
